removed files and improved language

--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Guy's Birthday Website</title>
+    <title>Birthday Website</title>
     <script>
         // GitHub Pages SPA routing solution
         // This redirects all 404s to the appropriate page
@@ -30,7 +30,7 @@
 </head>
 <body>
     <div style="text-align: center; padding: 2rem; font-family: Arial, sans-serif;">
-        <h1>🎂 Redirecting to Guy's Birthday Website...</h1>
+        <h1>🎂 Redirecting to Birthday Website...</h1>
         <p>If you're not automatically redirected, <a href="/">click here</a>.</p>
     </div>
 </body>
