--- a/countdown.html
+++ b/countdown.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Guy's Birthday Countdown 🎉</title>
+    <title>Birthday Countdown 🎉</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 </head>
@@ -19,14 +19,14 @@
         <!-- Big Birthday Wishes Button (shown when countdown finished) -->
         <div class="big-wishes-button" id="big-wishes-button" style="display: none;">
             <a href="/wishes" class="big-wishes-btn">
-                🎉 Guy's Birthday Has Arrived! Click to See Wishes 🎂
+                🎉 Birthday Has Arrived! Click to See Wishes 🎂
             </a>
         </div>
 
         <!-- Countdown Section -->
         <div id="countdown-section" class="section active">
             <div class="content">
-                <h1 class="title">🎂 Guy's Birthday Countdown</h1>
+                <h1 class="title">🎂 Birthday Countdown</h1>
                 
                 <div class="countdown-container">
                     <div class="countdown-item">
@@ -47,13 +47,9 @@
                     </div>
                 </div>
 
-                <div class="date-display">
-                    <p>Until September 5th, 2025</p>
-                </div>
-
                 <!-- Birthday Arrived Message (shown after countdown) -->
                 <div class="birthday-arrived" id="birthday-arrived" style="display: none;">
-                    <h2 class="birthday-title">🎉 It's Guy's Birthday! 🎉</h2>
+                    <h2 class="birthday-title">🎉 It's Birthday! 🎉</h2>
                     <p class="birthday-message">The wait is over! Click below to see the birthday wishes.</p>
                     <a href="/wishes" class="birthday-btn">🎂 View Birthday Wishes</a>
                 </div>
