--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Guy Vardi - Homepage</title>
+    <title>GV - Homepage</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 </head>
@@ -18,7 +18,7 @@
     <div class="container">
         <div class="landing-content">
             <div class="pdf-header">
-                <h1 class="pdf-title">Guy Vardi - A Landing Page to be Updated</h1>
+                <h1 class="pdf-title">GV - A Landing Page to be Updated</h1>
                 <div class="pdf-actions">
                     <a href="/countdown" class="hero-btn primary">
                         🎂 Birthday Countdown
