--- a/wishes.html
+++ b/wishes.html
@@ -58,7 +58,7 @@
             </div>
 
             <div class="wishes-actions">
-                <button id="celebrate-btn" class="celebrate-button">
+                <button id="celebrate-btn" class="celebrate-button" onclick="handleCelebrateButtonClick(this)">
                     🎉 Let's Celebrate! 🎉
                 </button>
 
