reresg akwast wirj better

--- a/countdown.html
+++ b/countdown.html
@@ -12,7 +12,7 @@
     <nav class="page-nav">
         <a href="/" class="nav-link">🏠 Home</a>
         <a href="/countdown" class="nav-link active">⏰ Countdown</a>
-        <a href="/wishes" class="nav-link" id="wishes-nav">🎂 Wishes</a>
+        <a href="/wishes" class="nav-link" id="wishes-nav" style="display: none;">🎂 Wishes</a>
     </nav>
 
     <div class="container">
