--- a/wishes.html
+++ b/wishes.html
@@ -39,19 +39,18 @@
                         </p>
                         
                         <div class="wishes-list">
-                            <div class="wish">🚀 From Sarah: "Hope your year ahead is filled with amazing projects and success!"</div>
-                            <div class="wish">☕ From Mike: "Thanks for always bringing the best coffee ideas to our morning meetings!"</div>
-                            <div class="wish">💡 From Jennifer: "Your creativity and problem-solving skills inspire us all - have a fantastic day!"</div>
-                            <div class="wish">🎯 From David: "Wishing you a year full of hitting all your goals and then some!"</div>
-                            <div class="wish">🌟 From Lisa: "You make every team project better - enjoy your special day!"</div>
-                            <div class="wish">🎨 From Alex: "Your attention to detail is incredible - hope this year brings you joy!"</div>
-                            <div class="wish">📈 From Rachel: "Here's to another year of your amazing leadership and guidance!"</div>
-                            <div class="wish">🎉 From Tom: "Thanks for being such an awesome teammate - celebrate big today!"</div>
+                            <div class="wish">🚀 From Lizzie: Happiest of birthdays to you, Guy! With another year comes ever more wisdom that I know we all look forward to. I asked ChatGPT for a piece of birthday wisdom for you, here's what we got: “You always know the right thing to say… but today, just say yes to cake and call it wisdom.”"</div>
+                            <div class="wish">🎨 From Josh: Hey Guy, surfed across the World Wide Web to wish you a happy birthday.  Hope that you have a wonderful weekend, catch you on the flipside!</div>
+                            <div class="wish">💡 From Chris: Happy Birthday Guy. I hope you have a great day and here's to many more.</div>
+                            <div class="wish">🎯 From Dan: Guy — happy birthday! Another year older, another year wiser. Thank you for open sourcing your wisdom for all of us.</div>
+                            <div class="wish">🌟 From Itay: Mazal Tov Guy, hope you and your family have a great year! May your work be automated and your blessings AI free.</div>
+                            <div class="wish">📈 From Zain: Guy — happy birthday! Another year older, another year wiser. Thank you for open sourcing your wisdom for all of us.</div>
+                            <div class="wish">☕ From Jake: HBD! Unlike a puppy for a gift, if you don't want this domain you can cast it out without guilt - but it's yours to keep if you wish.</div>
                         </div>
 
                         <p class="signature">
                             With warm birthday wishes,<br>
-                            Your awesome coworker! 💝
+                            The Dojo team 💝
                         </p>
                     </div>
                 </div>
